--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-FISICULTURISMO 
+<header>FISICULTIRISMO</header> 
 
-Ex-Bodybuilder Revela Lado Sombrio do Fisiculturismo!
-#
+<h1>Revela Lado Sombrio do Fisiculturismo!</h1> 
+<p>#BORiBUILDER</p>
